kubernetes/core/networking/nginx-ext-ingress-system/services/plex/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: ExternalName
  externalName: media.${LOCAL_DOMAIN}
  ports:
    - name: http
      port: &port 32400
      protocol: TCP
      targetPort: *port
