kubernetes/core/networking/nginx-ext-ingress-system/services/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app plex
  annotations:
    external-dns.alpha.kubernetes.io/target: ${EXTERNAL_DOMAIN}
spec:
  ingressClassName: ext-ingress
  rules:
    - host: &host plex.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 32400
  tls:
    - hosts:
        - *host
